# djangopy

./: pyproject.toml  requirements.txt
app/: models.py
djangopy/: settings.py
